--- a/PracticaFinal/memoria/bibliografia.bib
+++ b/PracticaFinal/memoria/bibliografia.bib
@@ -2,7 +2,7 @@
   author =   {Nakatani Shuyo},
   title =    {langdetect 1.0.8},
   howpublished = {\url{https://pypi.org/project/langdetect/}},
-  month =    marz,
+  month =    mar,
   year =     2020
 }
 
@@ -11,4 +11,50 @@
       author    = "Rothfuss, Patrick",
       year      = 2007,
       publisher = "DAW Books Hardcover"
+}
+
+@book{sapiens,
+      title     = "Sapiens A Brief History of Humankind",
+      author    = "Harari, Yuval Noah",
+      year      = 2014,
+      publisher = "Harper"
+}
+
+@Misc{gbbe,
+  author =   {Naren Santhanam},
+  title =    {Goodreads' Best Books Ever},
+  howpublished = {\url{https://www.kaggle.com/meetnaren/goodreadsbest-books/activity}},
+  month =    dec,
+  year =     2018
+}
+
+@Misc{cmu,
+  author =   {David Bamman and Noah Smith},
+  title =    {CMU Book Summary Dataset},
+  howpublished = {\url{https://www.cs.cmu.edu/~dbamman/booksummaries.html}},
+  year =     2013
+}
+
+@article{pr2,
+  author ={Miguel Gutierrez and Mario Lozano and Alba Reinders and Alejandro Valverde},
+  title ={Análisis de reseñas de Tripadvisor},
+  year ={2020},
+  pages ={11}
+}
+
+@inproceedings{naive,
+  title={Re data challenge: Requirements identification with word2vec and tensorflow},
+  author={Alex Dekhtyar and Vivian Fong},
+  booktitle={2017 IEEE 25th International Requirements Engineering Conference (RE)},
+  pages={484--489},
+  year={2017},
+  organization={IEEE}
+}
+
+@Misc{google,
+  author =   {Tomas Mikolov et al.},
+  title =    {world2vec},
+  howpublished = {\url{https://code.google.com/archive/p/word2vec/}},
+  month =    jul,
+  year =     2013
 }
